<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package  format="3">
  <name>visp_camera_calibration</name>
  <version>0.13.2</version>

  <description>
     visp_camera_calibration allows easy calibration of
     cameras using a customizable pattern and ViSP library.
  </description>
  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/visp_camera_calibration</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>camera_calibration_parsers</build_depend> <!-- Write camera data to ini file -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>

  <exec_depend>camera_calibration_parsers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visp</exec_depend>
  <exec_depend>visp_bridge</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
